fix(Contact):overflow will now scroll

--- a/src/components/apps/Contact.module.scss
+++ b/src/components/apps/Contact.module.scss
@@ -2,6 +2,9 @@
 
 .root {
   padding: $padding;
+  overflow: auto;
+  height: 100%;
+  width: 100%;
 }
 
 .grid {
